--- a/doc/stylesheet.css
+++ b/doc/stylesheet.css
@@ -1,29 +1,80 @@
-/* Javadoc ÑùÊ½±í */
+/* Javadoc ï¿½ï¿½Ê½ï¿½ï¿½ */
 
-/* ÔÚ´Ë´¦¶¨ÒåÑÕÉ«¡¢×ÖÌåºÍÆäËûÑùÊ½ÊôÐÔÒÔ¸²¸ÇÄ¬ÈÏÖµ */
+/* ï¿½Ú´Ë´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½É«ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¸ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½Öµ */
 
-/* Ò³Ãæ±³¾°ÑÕÉ« */
-body { background-color: #FFFFFF; color:#000000 }
+/* Ò³ï¿½æ±³ï¿½ï¿½ï¿½ï¿½É« */
+body {
+	background-color: #FFFFFF;
+	color: #000000
+}
 
-/* ±êÌâ */
-h1 { font-size: 145% }
+/* ï¿½ï¿½ï¿½ï¿½ */
+h1 {
+	font-size: 145%
+}
 
-/* ±í¸ñÑÕÉ« */
-.TableHeadingColor     { background: #CCCCFF; color:#000000 } /* Éî×ÏÉ« */
-.TableSubHeadingColor  { background: #EEEEFF; color:#000000 } /* µ­×ÏÉ« */
-.TableRowColor         { background: #FFFFFF; color:#000000 } /* °×É« */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½É« */
+.TableHeadingColor {
+	background: #CCCCFF;
+	color: #000000
+} /* ï¿½ï¿½ï¿½ï¿½É« */
+.TableSubHeadingColor {
+	background: #EEEEFF;
+	color: #000000
+} /* ï¿½ï¿½ï¿½ï¿½É« */
+.TableRowColor {
+	background: #FFFFFF;
+	color: #000000
+} /* ï¿½ï¿½É« */
 
-/* ×ó²àµÄ¿ò¼ÜÁÐ±íÖÐÊ¹ÓÃµÄ×ÖÌå */
-.FrameTitleFont   { font-size: 100%; font-family: Helvetica, Arial, sans-serif; color:#000000 }
-.FrameHeadingFont { font-size:  90%; font-family: Helvetica, Arial, sans-serif; color:#000000 }
-.FrameItemFont    { font-size:  90%; font-family: Helvetica, Arial, sans-serif; color:#000000 }
+/* ï¿½ï¿½ï¿½Ä¿ï¿½ï¿½ï¿½Ð±ï¿½ï¿½ï¿½Ê¹ï¿½Ãµï¿½ï¿½ï¿½ï¿½ï¿½ */
+.FrameTitleFont {
+	font-size: 100%;
+	font-family: Helvetica, Arial, sans-serif;
+	color: #000000
+}
 
-/* µ¼º½À¸×ÖÌåºÍÑÕÉ« */
-.NavBarCell1    { background-color:#EEEEFF; color:#000000} /* µ­×ÏÉ« */
-.NavBarCell1Rev { background-color:#00008B; color:#FFFFFF} /* ÉîÀ¶É« */
-.NavBarFont1    { font-family: Arial, Helvetica, sans-serif; color:#000000;color:#000000;}
-.NavBarFont1Rev { font-family: Arial, Helvetica, sans-serif; color:#FFFFFF;color:#FFFFFF;}
+.FrameHeadingFont {
+	font-size: 90%;
+	font-family: Helvetica, Arial, sans-serif;
+	color: #000000
+}
 
-.NavBarCell2    { font-family: Arial, Helvetica, sans-serif; background-color:#FFFFFF; color:#000000}
-.NavBarCell3    { font-family: Arial, Helvetica, sans-serif; background-color:#FFFFFF; color:#000000}
+.FrameItemFont {
+	font-size: 90%;
+	font-family: Helvetica, Arial, sans-serif;
+	color: #000000
+}
 
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½É« */
+.NavBarCell1 {
+	background-color: #EEEEFF;
+	color: #000000
+} /* ï¿½ï¿½ï¿½ï¿½É« */
+.NavBarCell1Rev {
+	background-color: #00008B;
+	color: #FFFFFF
+} /* ï¿½ï¿½ï¿½ï¿½É« */
+.NavBarFont1 {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #000000;
+	color: #000000;
+}
+
+.NavBarFont1Rev {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #FFFFFF;
+	color: #FFFFFF;
+}
+
+.NavBarCell2 {
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #FFFFFF;
+	color: #000000
+}
+
+.NavBarCell3 {
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #FFFFFF;
+	color: #000000
+}
